fixed comment and flex wrap reverse

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,8 @@
   font-weight: 300;
   box-sizing: border-box;
   /* 1w. There needs to be a width in order for you to notice flex-wrap. If we don't use flex wrap no matter how big we try to make our boxes the flex container doesn't allow it.  */
-  width: 500px;
+  width: 15%;
+  outline: solid 1px blue;
 }
 
 .box-1 {background: #e51400;}
@@ -57,7 +58,9 @@
   display: flex;
   flex-direction:  column;
   border: 10px solid black;
-  height: 90vh;
+  /* If we to use flex-wrap: wrap-reverse on a column then we need to make sure set a min height in the container if we find that nothing changes. */
+  /* We need our divs/boxes to overflow and that cannot happen if our container is bigger than our boxes height. We will never see the overflow*/
+  height: 100px;
 }
 
 /* ==================== */
@@ -67,6 +70,7 @@
 /* If we use flex-wrap: wrap  */
 .container {
     /* 1w. Width - There needs to be a width in order for you to notice flex-wrap. If we don't use flex wrap no matter how big we try to make our boxes the flex container doesn't allow it.  */
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
+    
 }
 
